@@ -36,7 +36,6 @@ dist_walltime_panel_SOURCES = cmdswitch.cpp cmdswitch.h\
                               combobox.cpp combobox.h\
                               config.cpp\
                               configdialog.cpp configdialog.h\
-                              profile.cpp profile.h\
                               walltime-panel.cpp walltime-panel.h
 
 nodist_walltime_panel_SOURCES = moc_combobox.cpp\
