@@ -19,74 +19,31 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
-#include <QMessageBox>
+#include <QSettings>
 
-#include "profile.h"
 #include "walltime-panel.h"
 
-bool MainWidget::LoadConfig()
+void MainWidget::LoadConfig()
 {
-  bool ret=false;
+  QSettings s;
 
-  Profile *p=new Profile();
-  if(p->setSource(ConfigFilename())) {
-    panel_clock_address=p->addressValue("WalltimePanel","ClockAddress","");
-    panel_countmode_box->
-      setCurrentItemData(p->stringValue("WalltimePanel","CountMode","SM U!"));
-    panel_preset_edit->
-      setTime(QTime().addSecs(p->intValue("WalltimePanel","Preset")));
-    int x=p->intValue("WalltimePanel","GeometryX",geometry().x());
-    int y=p->intValue("WalltimePanel","GeometryY",geometry().y());
-    int w=p->intValue("WalltimePanel","GeometryWidth",sizeHint().width());
-    int h=p->intValue("WalltimePanel","GeometryHeight",sizeHint().height());
-    setGeometry(x,y,w,h);
-  }
-  else {
-    setGeometry(geometry().x(),geometry().y(),
-		sizeHint().width(),sizeHint().height());
-  }
-  delete p;
-
-  return ret;
+  panel_clock_address.setAddress(s.value("ClockAddress").toString());
+  panel_countmode_box->
+    setCurrentItemData(s.value("CountMode","SM U!").toString());
+  panel_preset_edit->setTime(QTime().addSecs(s.value("Preset").toInt()));
+  resize(s.value("MainWindowSize",sizeHint()).toSize());
+  move(s.value("MainWindowPosition",
+	       QPoint(geometry().x(),geometry().y())).toPoint());
 }
 
 
 void MainWidget::SaveConfig()
 {
-  if(!ConfigFilename().isEmpty()) {
-    FILE *f=NULL;
-    QString tempfile=ConfigFilename()+"-temp";
-    
-    if((f=fopen(tempfile.toUtf8(),"w"))!=NULL) {
-      fprintf(f,"[WalltimePanel]\n");
-      fprintf(f,"ClockAddress=%s\n",
-	      (const char *)panel_clock_address.toString().toUtf8());
-      fprintf(f,"CountMode=%s\n",(const char *)
-	      panel_countmode_box->currentItemData().toString().toUtf8());
-      fprintf(f,"Preset=%d\n",QTime().secsTo(panel_preset_edit->time()));
-      fprintf(f,"GeometryX=%d\n",geometry().x());
-      fprintf(f,"GeometryY=%d\n",geometry().y());
-      fprintf(f,"GeometryWidth=%d\n",geometry().width());
-      fprintf(f,"GeometryHeight=%d\n",geometry().height());
-      fprintf(f,"\n");
-      fclose(f);
-      rename(tempfile.toUtf8(),ConfigFilename().toUtf8());
-    }
-  }
-}
+  QSettings s;
 
-
-QString MainWidget::ConfigFilename()
-{
-  QString ret;
-
-  if(getenv("HOME")!=NULL) {
-    ret=QString(getenv("HOME"))+"/.walltime-panel";
-  }
-  if(ret.isEmpty()) {
-    QMessageBox::warning(this,"WallTime Panel - "+tr("Error"),
-			 tr("Unable to determine configuration location!"));
-  }
-
-  return ret;
+  s.setValue("ClockAddress",panel_clock_address.toString());
+  s.setValue("CountMode",panel_countmode_box->currentItemData().toString());
+  s.setValue("Preset",QTime().secsTo(panel_preset_edit->time()));
+  s.setValue("MainWindowSize",size());
+  s.setValue("MainWindowPosition",pos());
 }
